2006-03-27  Brian Cameron  <brian.cameron@sun.com>

	* gui/greeter_greeter_item_ulist.c: In greeter_generate_userlist
	  pass in the value for info rather than getting the value again.

2006-03-27  Brian Cameron  <brian.cameron@sun.com>

	* gui/gdmlogin.c, gui/greeter/greeter_item.c, gui/greeter/greeter.c
	  gui/greeter_greeter_item_ulist.c, gui/greeter/greeter_system.c:
	  Fix gdmlogin and gdmgreeter so the "Configure GDM" menu choice is
	  not available when accessibility is turned on since running it
	  causes the system to hang.  Also fix gdmgreeter so the Face
	  Browser is not displayed when Browser=false.

2006-03-27  Brian Cameron  <brian.cameron@sun.com>

        * daemon/verify-pam.c: Fix some Solaris specific code to call the new
          gdm_daemon_config_get_gdmuid and gdm_daemon_config_get_gdmgid
          functions.

2006-03-27  Brian Cameron  <brian.cameron@sun.com>

	* gui/greeter/greeter_item_pam.c: Partially fix #412576 by adding
	  ATK label for the entry field.  Patch provided by David Zeuthen
	  <david@fubar.dk>.

2006-03-27  Brian Cameron  <brian.cameron@sun.com>

	* gui/gdmsetup.glade, daemon/gdm.c: Fix some messages.  Partially
	  fixes bug #423158.

2006-03-27  Brian Cameron  <brian.cameron@sun.com>

	* gui/greeter/greeter_item_customlist.c:  Fix check so the
	  language combo style works.  Fixes bug #423063.  Patch
	  provided by Simon <simon@munton.demon.co.uk>.

2007-03-26  William Jon McCann  <mccann@jhu.edu>

	* configure.ac:
	* daemon/gdm-daemon-config-entries.h:
	* daemon/gdm-daemon-config-keys.h:
	* daemon/gdm-daemon-config.c: (gdm_daemon_config_to_string):
	* daemon/slave.c: (gdm_slave_start):
	* gui/gdmsetup.c: (setup_general_tab):
	* gui/gdmsetup.glade:
	Remove the AlwaysRestartServer configuration option.
	Fixes part of #326771

2007-03-26  William Jon McCann  <mccann@jhu.edu>

	* C/gdm.xml: Update docs for last commit.

2007-03-26  William Jon McCann  <mccann@jhu.edu>

	* config/gdm.conf.in:
	* configure.ac: