@@ -1,3 +1,10 @@
+2007-03-27  William Jon McCann  <mccann@jhu.edu>
+
+	* acinclude.m4:
+	* configure.ac: Make sure that we expand the LOCALSTATEDIR
+	before using it to find the PID file location.
+	For #162849.
+
 2006-03-27  Brian Cameron  <brian.cameron@sun.com>
 
 	* gui/greeter_greeter_item_ulist.c: In greeter_generate_userlist
